# Flowers_marketplace

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  test_imports.py
.claude/: claude.md  settings.local.json
alembic/: env.py
alembic/versions/: 20250112_1430_002_add_normalized_layer.py  20250112_initial_schema.py  20250113_003_add_orders.py  20260203_004_add_auth_fields.py  20260204_005_add_ai_tables.py  20260205_1232_22d7b32e747f_add_deleted_at_to_supplier_items.py  20260205_1500_add_flower_catalog.py  20260205_1600_add_offer_display_title.py  20260223_add_photo_url_to_supplier_items.py  20260223_add_telegram_links.py  20260227_add_seller_profile_and_assembled.py  20260302_add_password_reset_codes.py  20260303_allow_manual_items.py  (+7 more)
docs/: DEPLOYMENT.md  DESIGN_BRIEF.md  MVP_SCOPE.md  NORMALIZATION_RULES.md  QUICK_TEST.md  README.md  SPRINT_4_PLAN.md  TASK2_PROGRESS.md  Task 1.md  Task 2 - ROADMAP.md  Task 2.1 - COMPLETED.md  Task 2.2 - COMPLETED.md  Task 2.2 - Normalization Endpoints.md  Task 2.3 - Publish Service and Offers Endpoint.md  Task 2.4 - COMPLETED.md  Task 2.md  Task 3.md  Task 9 - Frontend Development - COMPLETED.md  Task 9.md  VISION.md  ПРЕЗЕНТАЦИЯ_ЗАКАЗЧИКУ.md
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
infra/: deploy.sh  docker-compose.yml  nginx-wb-reputation.conf
prototype/: catalog.css  catalog.js  catalog_page.html
scripts/: backup-db.sh  migrate_normalize_names.py  reparse_supplier_items.py  seed_flower_catalog.py
tests/: conftest.py
(+191 files in other folders)
